# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: config.toml
configuration/: base.yaml
migrations/: 20221128155340_create_subscription_tokens_table.sql  20221205093703_seed_user.sql  20221209173001_create_newsletter_issues_table.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
