[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tokio = {version =  "1.22.0" , features = ["macros", "rt-multi-thread"]}
reqwest = "0.11.13"
serde = { version = "1.0.147", features = ["derive"] }
config = "0.13.2"
chrono = {version = "0.4.23", default-features = false, features = ["clock"]}
uuid = {version = "1.2.2" , features = ["v4"]}
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { verions = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
once_cell = "1.16.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.2"
serde-aux = "4.1.2"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"


[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]