[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = {version =  "1" , features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.147", features = ["derive"] }
config = "0.13.2"
chrono = {version = "0.4.23", default-features = false, features = ["clock"]}
uuid = { version = "1", features = ["v4", "serde"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { verions = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
once_cell = "1.16.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.2"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.4", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
serde_json = "1"
actix-web-lab = "0.16"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"

[dev-dependencies]
claim = "0.5.0"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = {version =  "1" , features = ["macros", "rt"]}
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
serde_urlencoded = "0.7.1"

[dependencies.reqwest]
version = "0.11"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]